# AGNI

./: .gitignore  README.md  environment.yml  pytest.ini  setup.cfg
.github/workflows/: main.yaml
src/: CPU-GPU-distribution.py  README.md  _utils.py  assemble_and_solve.py  assemble_stiffness_matrix.py  block_Lanczos_standard.py  calculate_geometric_coefficients_DESC.py  randomized_svd_generalized.py  randomized_svd_standard.py
tests/: README.md  check_condition_number.py  create_Pade_Lele_diffmatrix.py  create_cheb_diffmatrix.py  create_fourier_diffmatrix.py  test_Pade-Lele_diffmatrix2.py  test_cheb_diffmatrix.py  test_fourier_diffmatrix.py  test_fourier_diffmatrix2.py  test_mixed_derivatives2D.py  test_mixed_derivatives3D_FDradial_NFP.py  test_mixed_derivatives3D_NFP.py  test_power_series_eigenvalue_solver.py  test_power_series_eigenvalue_solver2.py
