[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[versioneer]
VCS = git
style = pep440

[coverage:run]
# Settings to control coverage.py or pytest with coverage flags: "--cov" (requires pytest-cov)
# we only care about the coverage of the source itself
# otherwise it measures coverage of the tests themselves as well
source =
       src/


[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    if __name__ == .__main__.:

ignore_errors = True

[tool:pytest]
markers=
	unit: marks small unit tests
	regression: marks end to end regression tests
	solve: marks tests that rely solving an equilibrium
    optimize : marks tests that perform an optimization
	slow: marks tests as slow (deselect with 'pytest -m "not slow"').
	fast: mark tests as fast.

[flake8]
# Primarily ignoring whitespace, indentation, and commenting etiquette that black does not catch
# These will be fixed in a code-cleaning branch in the future
ignore =
    # Let black handle whitespace line breaks and stuff like that
    E1, E2, W503, W504, W505,
    # multiline statements are ok sometimes
    E704,
    # lambda expressions are useful
    E731,
    # variable names like "l" are pretty common for mode numbers
    E741,
    # don't want to always use "imperative mood" in docstrings
    D401,
    # don't care about docstrings in __dunder__ methods
    D105,
max-line-length = 98
exclude =
    docs/*
    devtools/*
    build/*
    local/*
    publications/*
    .git/*
    misc/*
    versioneer.py
max-complexity = 20
docstring-convention = numpy

[isort]
profile=black
src_paths=src,tests
